<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.activity.MainActivity">

    <TextSwitcher
        android:id="@+id/tw_my_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Device Management"
        android:textSize="20dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.q42.android.scrollingimageview.ScrollingImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            scrolling_image_view:randomness="@array/randomness"
            scrolling_image_view:speed="3dp"
            scrolling_image_view:src="@array/random_imgs" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:src="@drawable/van" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutLinear1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listview_recent"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="1dp"
            android:divider="@drawable/list_divider_recent"
            android:dividerHeight="1dp"
            android:scrollbars="none"
            android:transitionName="@string/listview_history" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnAvailableDevice"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/ripple_available"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/available"
                    android:textColor="@color/color_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnBorrowDevice"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/btnAvailableDevice"
                    android:background="@drawable/ripple_borrow"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/borrow"
                    android:textColor="@color/color_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                />

                <Button
                    android:id="@+id/btnLostDevice"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/btnBorrowDevice"
                    android:background="@drawable/ripple_lost"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/lost"
                    android:textColor="@color/color_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnAllDevice"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="95dp"
                    android:background="@drawable/ripple_all"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/all"
                    android:textColor="@color/color_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnScanDevice"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="24dp"
                    android:layout_toRightOf="@id/btnAllDevice"
                    android:background="@drawable/ripple_scan"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/scan"
                    android:textColor="@color/color_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>