<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.activity.MainActivity" >

    <com.example.effect.Slide
        android:id="@+id/txtIntro"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:background="#000000"
        android:gravity="center"
        android:text="Available"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/layoutLinear1"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <com.charting.charts.PieChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listview_recent"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="1dp"
            android:divider="@drawable/list_divider_recent"
            android:dividerHeight="1dp"
            android:scrollbars="none"
            android:transitionName="@string/listview_history" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnAvailableDevice"                   
                    android:layout_width="72dp"
                    android:layout_height="72dp"                    
                    android:layout_marginLeft="40dp" 
                     style="?android:attr/buttonStyleSmall"                   
                    android:background="@drawable/ripple_available"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"                    
                    android:text="@string/available"
                    android:textStyle="bold"
                    android:textColor="@color/color_text"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnBorrowDevice"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/btnAvailableDevice"
                     style="?android:attr/buttonStyleSmall"                   
                    android:background="@drawable/ripple_borrow"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"                    
                    android:text="@string/borrow"
                    android:textStyle="bold"
                    android:textColor="@color/color_text"
                    android:textSize="15sp" /> />

                <Button
                    android:id="@+id/btnLostDevice"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/btnBorrowDevice"
                     style="?android:attr/buttonStyleSmall"                   
                    android:background="@drawable/ripple_lost"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"                    
                    android:text="@string/lost"
                    android:textStyle="bold"
                    android:textColor="@color/color_text"
                    android:textSize="15sp" /> />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <Button
                    android:id="@+id/btnAllDevice"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="80dp"
                     style="?android:attr/buttonStyleSmall"                   
                    android:background="@drawable/ripple_all"
                    android:elevation="3dp"
                    android:fontFamily="sans-serif-light"                    
                    android:text="@string/all"
                    android:textStyle="bold"
                    android:textColor="@color/color_text"
                    android:textSize="15sp" /> />

                <Button
                    android:id="@+id/btnAddAvailableDevice"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="24dp"
                    android:layout_toRightOf="@id/btnAllDevice"
                    android:background="@drawable/search" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>